--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
 		"@graphql-codegen/typescript-graphql-request": "^1.9.1",
 		"@graphql-codegen/typescript-operations": "^1.9.1",
 		"@jest/test-sequencer": "^24.9.0",
-		"@prisma/sdk": "^0.0.93",
+		"@prisma/sdk": "^0.0.100",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/bull": "^3.10.6",
 		"@types/bull-arena": "^2.6.0",
@@ -145,6 +145,7 @@
 		"graphql-request": "^1.8.2",
 		"jest": "^24.9.0",
 		"keygrip": "^1.1.0",
+		"mem": "^6.0.1",
 		"node-mocks-http": "^1.8.1",
 		"npm-run-all": "^4.1.5",
 		"pg": "^7.14.0",
